--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "^0.1100.2",
-        "@angular/cli": "~10.0.6",
+        "@angular/cli": "^13.3.5",
         "@angular/compiler-cli": "~10.0.9",
         "@types/jasmine": "~3.5.0",
         "@types/jasminewd2": "~2.0.3",
