--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
         "zone.js": "~0.10.3"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^0.1100.2",
+        "@angular-devkit/build-angular": "^13.3.5",
         "@angular/cli": "^13.3.5",
         "@angular/compiler-cli": "~10.0.9",
         "@types/jasmine": "~3.5.0",
@@ -42,7 +42,7 @@
         "codelyzer": "^6.0.0",
         "jasmine-core": "~3.5.0",
         "jasmine-spec-reporter": "~5.0.0",
-        "karma": "~5.0.0",
+        "karma": "^6.3.20",
         "karma-chrome-launcher": "~3.1.0",
         "karma-coverage-istanbul-reporter": "~3.0.2",
         "karma-jasmine": "~3.3.0",
