--- a/package.json
+++ b/package.json
@@ -5,51 +5,42 @@
         "ng": "ng",
         "start": "ng serve",
         "build": "ng build",
-        "test": "ng test",
-        "lint": "ng lint",
-        "e2e": "ng e2e"
+        "watch": "ng build --watch --configuration development",
+        "test": "ng test"
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "~10.0.9",
-        "@angular/common": "~10.0.9",
-        "@angular/compiler": "~11.2.14",
-        "@angular/core": "~10.0.9",
-        "@angular/fire": "^6.1.4",
-        "@angular/forms": "~10.0.9",
-        "@angular/platform-browser": "~11.2.14",
-        "@angular/platform-browser-dynamic": "~10.0.9",
-        "@angular/router": "~10.0.9",
-        "@ngrx/effects": "^10.1.0",
-        "@ngrx/store": "^10.1.0",
-        "bootstrap": "^4.5.3",
-        "express": "^4.15.2",
-        "firebase": "^8.3.1",
-        "jquery": "^3.5.1",
-        "popper.js": "^1.16.1",
-        "rxjs": "~6.5.5",
+        "@angular/animations": "~13.3.0",
+        "@angular/common": "~13.3.0",
+        "@angular/compiler": "~13.3.0",
+        "@angular/core": "~13.3.0",
+        "@angular/forms": "~13.3.0",
+        "@angular/platform-browser": "~13.3.0",
+        "@angular/platform-browser-dynamic": "~13.3.0",
+        "@angular/router": "~13.3.0",
+        "@ngrx/effects": "^13.2.0",
+        "@ngrx/store": "^13.2.0",
+        "@popperjs/core": "^2.11.5",
+        "bootstrap": "^5.1.3",
+        "express": "^4.18.1",
+        "jquery": "^3.6.0",
+        "rxjs": "~7.5.0",
         "tether": "^1.4.7",
-        "tslib": "^2.0.0",
-        "zone.js": "~0.10.3"
+        "tslib": "^2.3.0",
+        "zone.js": "~0.11.4"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^13.3.5",
-        "@angular/cli": "^13.3.5",
-        "@angular/compiler-cli": "~11.2.14",
-        "@types/jasmine": "~3.5.0",
-        "@types/jasminewd2": "~2.0.3",
+        "@angular-devkit/build-angular": "~13.3.5",
+        "@angular/cli": "~13.3.5",
+        "@angular/compiler-cli": "~13.3.0",
+        "@types/jasmine": "~3.10.0",
         "@types/node": "^12.11.1",
-        "codelyzer": "^6.0.0",
-        "jasmine-core": "~3.5.0",
-        "jasmine-spec-reporter": "~5.0.0",
-        "karma": "^6.3.20",
+        "jasmine-core": "~4.0.0",
+        "karma": "~6.3.0",
         "karma-chrome-launcher": "~3.1.0",
-        "karma-coverage-istanbul-reporter": "~3.0.2",
-        "karma-jasmine": "~3.3.0",
-        "karma-jasmine-html-reporter": "^1.5.0",
-        "protractor": "~7.0.0",
-        "ts-node": "~8.3.0",
-        "tslint": "~6.1.0",
-        "typescript": "~4.1.6"
+        "karma-coverage": "~2.1.0",
+        "karma-jasmine": "~4.0.0",
+        "karma-jasmine-html-reporter": "~1.7.0",
+        "typescript": "~4.6.2"
     }
 }
